# weird

./: README.md  ffigen.yaml  pubspec.yaml
example/: .metadata  pubspec.yaml
lib/: main.dart  weird.dart  weird_bindings_generated.dart
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libweird.dylib  weird.c  weird.h
